tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/table/array-missing-bracket.stderr
TOML parse error at line 1, column 9
  |
1 | [[albums]
  |         ^
invalid table header
expected `.`, `]]`
